<resources>
    <string name="app_name">Roller</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="email">Email</string>
    <string name="has_o">Hasło</string>
    <string name="zarejestruj">Zarejestruj</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="password">Password</string>
    <string name="loggin">Loggin</string>
    <string name="login">Login</string>
    <string name="rzuc">rzuc</string>
    <string name="masz_konto_zaloguj_teraz">Masz Konto? Zaloguj teraz.</string>
    <string name="nie_masz_konta_zarejestruj_si">Nie masz konta? Zarejestruj się.</string>
    <string name="podaj_email">podaj email</string>
    <string name="podaj_haslo">podaj haslo</string>
</resources>