<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".Logging">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView_logo_register"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/roller" />

            <TextView
                android:id="@+id/textView_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingTop="10dp"
                android:text="@string/rejestracja"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:counterMaxLength="30"
                app:passwordToggleTint="@color/purple_500">

                <EditText
                    android:id="@+id/editText_Email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/podaj_email"
                    android:hint="@string/email"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:counterMaxLength="30"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/purple_500">

                <EditText
                    android:id="@+id/editText_Password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/podaj_haslo"
                    android:hint="@string/has_o"
                    android:inputType="textPassword"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_back_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masz_konto_zaloguj_teraz"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:text="@string/zarejestruj" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>